# zcol

./: CLAUDE.md  CMakeLists.txt  README.md  col_zzj.hpp  zcol.hpp
.github/workflows/: cmake-multi-platform.yml  release.yml
